--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-kivy==2.1.0
-opencv-python==4.8.1.78
-numpy==1.24.3
-ultralytics==8.0.196
+opencv-python>=4.10.0
+numpy>=2.1.0
+ultralytics>=8.4.14
+Pillow>=10.0.0
