--- a/smart-focus-ai/backend/Dockerfile
+++ b/smart-focus-ai/backend/Dockerfile
@@ -18,8 +18,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application
 COPY . .
 
-# Expose port
-EXPOSE 8000
+# Expose Cloud Run default port
+EXPOSE 8080
 
-# Run application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run application on the platform-provided port
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8080}"]
